<resources>
    <string name="app_name">Inspection App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Bothwell-Accurate</string>
    <string name="nav_header_subtitle">Inspection App</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_map">Map</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="create__account">Create Account</string>
    <string name="remember_me">Remember Me</string>
    <string name="log_in">Log-In</string>
    <string name="already_a_user">Already a user ?</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="name">Name</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="EmployeeId">Employee ID</string>
    <string name="phoneNumber">Mobile Number</string>
    <string name="spinner_title">Department</string>
    <string name="google_map_api_key">AIzaSyBlM-zTH0mk3k_98fZqsuyKPkJ7GxEejb4</string>
    <string name="logo_image">Logo Image</string>
    <string name="department">Department:</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="contact_number">Phone Number</string>
    <string name="update_account">Update Account</string>
    <string name="delete_account">Delete Account</string>
    <string name="load_data">Load Data</string>
    <string name="tvCreateAccount">Don\'t have an account ?</string>
    <string name="Signup">Sign up</string>
    <string name="addProject">Add Project</string>
    <string name="Address">Address</string>
    <string name="ClientName">Client Name</string>
    <string name="StreetAddress">Street Address</string>
    <string name="province">Province</string>
    <string name="city">City</string>
    <string name="SaveClientInfo">Save</string>
    <string name="action_camera">Camera</string>
    <string name="action_map">Map</string>
    <string name="Choose_picture">Pick a photo from gallery</string>
    <string name="UpdateClientInfo">Update</string>
    <string name="menu_clientUpdate">Customer</string>
    <string name="save">Save</string>
    <string name="spinner_Province">Province</string>
    <string name="Screenshot">Take Screenshot</string>
    <string name="spinner_Category">Category</string>
    <string name="Department">Department</string>
    <string name="Glossary_term">Enter new term</string>
    <string name="glossary_description">Enter term description</string>
    <string name="category">Category</string>
    <string name="done">done</string>
    <string name="addDeficiency">Add Deficiency</string>
    <string name="change_password">Change Password</string>
    <string name="OldPassword">Old Password</string>
    <string name="CurrentPassword">Current Password</string>
    <string name="newPassword">New Password</string>
</resources>