<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:textSize="22sp"
            android:textStyle="bold"
            android:textColor="#000000"
            android:text="Profile">

        </TextView>

        <Button
            android:id="@+id/btnGetAccountInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Get Info"
            android:textSize="10sp"
            android:layout_marginLeft="18dp"

            />


    </LinearLayout>

    <TextView
        android:id="@+id/tvUEmployeeID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/EmployeeId"
        android:layout_marginTop="12dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"/>

    <TextView
        android:id="@+id/tvUEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:layout_marginTop="12dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"/>

    <EditText
        android:id="@+id/edtUFirstname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/firstname"
        android:layout_marginTop="12dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"/>
    <EditText
        android:id="@+id/edtULastname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/lastname"
        android:layout_marginTop="12dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"/>

    <EditText
        android:id="@+id/edtUPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"
        />
    <EditText
        android:id="@+id/edtUConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"
        />

    <EditText
        android:id="@+id/edtUContactNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="12dp"
        android:layout_marginStart="8dp"
        android:hint="@string/contact_number"
        android:inputType="textPhonetic"
        />


    <Button
        android:id="@+id/btnUpdateAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/update_account"
        android:layout_marginStart="8dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="8dp"
        />

    <Button
        android:id="@+id/btnDeleteAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"
        android:background="@android:color/holo_red_dark"
        android:textColor="@android:color/white"
        android:text="@string/delete_account" />

</LinearLayout>