<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="40dp"

    tools:context=".activities.ChangePasswordActivity">


    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:id="@+id/edtChangePassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/anchor"
        android:layout_marginBottom="12dp"
        android:hint="@string/password"
        app:endIconMode="password_toggle"
        android:layout_gravity="center"
        tools:ignore="MissingConstraints">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>


    <View
        android:id="@+id/anchor"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_centerInParent="true" />


    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:id="@+id/edtConfirmChangePassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/anchor"
        android:layout_marginBottom="35dp"
        android:hint="@string/confirm_password"
        app:endIconMode="password_toggle"
        tools:ignore="MissingConstraints">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/btnConfirmChangePassword"
        android:layout_width="220dp"
        android:layout_height="60dp"
        android:layout_centerInParent="true"
        android:layout_below="@+id/edtConfirmChangePassword"
        android:gravity="center"
        android:background="@color/logo"
        android:text="@string/change_password" />

</RelativeLayout>